[package]
name = "adr_config"
version = "0.1.0"
authors = ["MALLASSI Olivier <Olivier.MALLASSI@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.3.1"
serde_json = "1.0.40"
serde_yaml = "0.8.9"
serde = "1.0.101"
serde_derive = "1.0.102"
slog = "2.5.2"
slog-term = "2.4.2"
slog-async = "2.3.0"
