[package]
name = "adr_config"
version = "0.1.0"
authors = ["MALLASSI Olivier <Olivier.MALLASSI@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.3.1"
# use git master dep to get the truncate (https://github.com/rust-cli/confy/blob/master/src/lib.rs#L195)
# confy = { git = "https://github.com/rust-cli/confy" }
serde_json = "1.0.44"
serde_yaml = "0.8.9"
serde = "1.0.104"
serde_derive = "1.0.104"
slog = "2.5.2"
slog-term = "2.4.2"
slog-async = "2.3.0"

[dev-dependencies]
directories = "2.0.2"
uuid = { version = "0.8.1", features = ["v4"] }
