[package]
name = "adr_config"
version = "0.1.0"
authors = ["MALLASSI Olivier <Olivier.MALLASSI@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# confy = "0.3.1"
# use git master dep to get the truncate (https://github.com/rust-cli/confy/blob/master/src/lib.rs#L195)
confy = "0.5.1"  #{ git = "https://github.com/rust-cli/confy", rev = "5a58388fa9b8bcd790a62c2a9db5abdcbe9fb467"} 
serde_json = "1.0.107"
serde_yaml = "0.9.25"
serde = "1.0.198"
serde_derive = "1.0.198"
slog = "2.7.0"
slog-term = "2.9.1"
slog-async = "2.8.0"

[dev-dependencies]
directories = "5.0.1"
uuid = { version = "0.8.1", features = ["v4"] }
