[package]
name = "adr_core"
version = "0.1.0"
authors = ["MALLASSI Olivier <Olivier.MALLASSI@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.6.0"
lazy_static = "1.4.0"
regex = "1.4.3"
walkdir = "2.3.1"
chrono = "0.4.19"

adr_config = {path = "../adr_config_local_impl"}

[[test]]
name = "create_adr"
harness = true


[dev-dependencies]
cucumber = {package = "cucumber_rust", version = "^0.6.0" }
directories = "4.0.1"
uuid = { version = "0.8.1", features = ["v4"] }
tempdir = "0.3"
