[package]
name = "adr_core"
version = "0.1.0"
authors = ["MALLASSI Olivier <Olivier.MALLASSI@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2.7.0"
slog-term = "2.9.1"
slog-async = "2.8.0"
lazy_static = "1.5.0"
regex = "1.11.1"
walkdir = "2.5.0"
chrono = "0.4.39"

adr_config = {path = "../adr_config_local_impl"}
futures = "0.3.31"


[[test]]
name = "create_adr"
harness = false

[[test]]
name = "tags_with_adr"
harness = false


[dev-dependencies]
cucumber = "0.21.1"
directories = "6.0.0"
tempdir = "0.3"
