[package]
name = "adr_search"
version = "0.1.0"
authors = ["MALLASSI Olivier <Olivier.MALLASSI@murex.com>"]
edition = "2018"

[dependencies]
tantivy = "0.20.2"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.6.0"
serde_json = "1.0.62"
serde = "1.0.123"
serde_derive = "1.0.123"
chrono="0.4.23"

adr_config = { path = "../adr_config_local_impl" }
adr_core = {path = "../adr_core_local_impl"}