[package]
name = "adr_core"
version = "0.1.0"
authors = ["MALLASSI Olivier <Olivier.MALLASSI@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2.5.2"
slog-term = "2.4.2"
slog-async = "2.3.0"
lazy_static = "1.4.0"
regex = "1.3.1"

# [[test]]
# name = "cucumber"
# harness = false

[[test]]
name = "create_adr"
harness = false


[dev-dependencies]
cucumber = {package = "cucumber_rust", version = "^0.6.0" }
directories = "2.0.2"
