[package]
name = "adr"
version = "0.1.0"
authors = ["MALLASSI Olivier <Olivier.MALLASSI@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.6.0"
lazy_static = "1.4.0"
prettytable-rs = "^0.8"
walkdir = "2.3.1"
dirs = "3.0.1"
regex = "1.4.3"

adr_core = {path = "../adr_core_local_impl"}
adr_config = {path = "../adr_config_local_impl"}
adr_search = {path = "../adr_search_local_impl"}
