[package]
name = "adr"
version = "0.1.3"
authors = ["MALLASSI Olivier <Olivier.MALLASSI@gmail.com>"]
edition = "2018"

[dependencies]
clap = "4.5.27"
slog = "2.7.0"
slog-term = "2.9.1"
slog-async = "2.8.0"
lazy_static = "1.4.0"
comfy-table = "=7.1.3"
dirs = "6.0.0"

adr_core = {path = "../adr_core_local_impl"}
adr_config = {path = "../adr_config_local_impl"}
adr_search = {path = "../adr_search_local_impl"}